update preference text updated

--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -7,7 +7,7 @@
     <string name="search_mv_hub">ค้นหา VIPA</string>
     <string name="show_all_results">แสดงทั้งหมด</string>
     <string name="change_password">เปลี่ยนรหัสผ่าน</string>
-    <string name="update_pref">อัปเดตค่าอ้างอิง</string>
+    <string name="update_pref">อัปเดต</string>
     <string name="my_profile">โปรไฟล์ของฉัน</string>
     <string name="by_email">โดยอีเมล</string>
     <string name="by_line">ทางไลน์</string>
