--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -123,7 +123,7 @@
     <string name="name_validation_profile">Name is required</string>
     <string name="profile_update_successfully">Updated Successfully!</string>
     <string name="profile_registered_successfully">Registered Successfully!</string>
-    <string name="forgot_password_response">Forgot Password requested email sent</string>
+    <string name="forgot_password_response">Thanks for putting the request. If we find the email address in our system, we will send the reset link over the mail Please enter New Password</string>
 
 
     <string name="please_enter_new_password">Silakan masukkan Kata Sandi Baru</string>
