--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -100,7 +100,7 @@
 
     <string name="update">อัพเดท</string>
     <string name="connct_facebbook">เชื่อมต่อโดย เฟสบุ๊ค</string>
-    <string name="detail_title">่คุณสามารถเปลี่ยนรหัสผ่านได้ใหม่ผ่านลิงก์สำหรับรีเซ็ตรหัสผ่านที่จะถูกส่งไปยังอีเมลที่คุณลงทะเบียนไว้""ระบุอีเมลของคุณ</string>
+    <string name="detail_title">่คุณสามารถเปลี่ยนรหัสผ่านได้ใหม่ผ่านลิงก์สำหรับรีเซ็ตรหัสผ่านที่จะถูกส่งไปยังอีเมลที่คุณลงทะเบียนไว้</string>
     <string name="already_have_account_sign">ฉันมีบัญชีผู้ใช้งานอยู่แล้ว่?</string>
 
     <string name="cancel">ยกเลิก</string>
