--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,6 +94,11 @@
     <string name="detail_title">Enter your registered email address below and we will send you instructions on resetting your password.</string>
     <string name="already_have_account_sign">Already have an account?</string>
 
+    <string name="description_auto">ปรับความคมชัดตามความเร็วอินเทอร์เน็ต</string>
+    <string name="description_sd">ความคมชัดปกติ</string>
+    <string name="description_hd">ความคมชัดสูง</string>
+    <string name="description_full_hd">ความคมชัดสูงสุด</string>
+
     <string name="cancel">Cancel</string>
     <string name="later">Later</string>
     <string name="no_internet">No internet connection found.</string>
@@ -137,7 +142,7 @@
     <string name="something_went_wrong">Something went wrong</string>
     <string name="image_upload_fail">Image upload failed</string>
 
-    <string name="search_mv_hub">Search VIPA</string>
+    <string name="search_mv_hub">Search</string>
     <string name="show_all_results">Show All</string>
     <string name="series">Series</string>
     <string name="article">Article</string>
@@ -356,7 +361,7 @@
     <string name="skip_intro">Skip Intro</string>
     <string name="streaming_settings">Streaming Settings</string>
 
-    <string name="auto">Auto</string>
+    <string name="auto">อัตโนมัติ</string>
     <string name="low">SD</string>
     <string name="medium">HD</string>
     <string name="high">Full HD</string>
