--- a/app/src/dev/res/values-en/strings.xml
+++ b/app/src/dev/res/values-en/strings.xml
@@ -54,5 +54,9 @@
 
     <string name="Downloading">Downloading</string>
     <string name="Paused">Paused</string>
+    <string name="set_as_profilepic">Set Profile Pic</string>
+    <string name="take_photo">Take Photo</string>
+
+
 
 </resources>
