--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -382,5 +382,10 @@
 
     <string name="minutes">minutes</string>
     <string name="For">For</string>
+    <string name="set_as_profilepic">Set Profile Pic</string>
+    <string name="take_photo">Take Photo</string>
+    <string name="select_from_library">Select from Library</string>
+    <string name="select_from_avtar">Select from avatar</string>
+
 
 </resources>
