--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -429,7 +429,7 @@
     <string name="For">สำหรับ</string>
     <string name="set_as_profilepic">ตั้งค่าภาพโปรไฟล์</string>
     <string name="take_photo">ถ่ายภาพด้วยกล้อง</string>
-    <string name="select_from_library">ลือกภาพจากคลังภาพ</string>
+    <string name="select_from_library">เลือกภาพจากคลังภาพ</string>
     <string name="select_from_avtar">เลือกภาพ</string>
 
 
