--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -405,6 +405,11 @@
     <string name="take_photo">Take Photo</string>
     <string name="select_from_library">Select from Library</string>
     <string name="select_from_avtar">Select from avatar</string>
+    <string name="genere">Genres</string>
+    <string name="sort">Sort</string>
+    <string name="apply_filter">Apply Filter</string>
+    <string name="filters">Filters</string>
+    <string name="select_one">You need to make at least one selection first!</string>
 
 
 </resources>
