--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -410,6 +410,11 @@
     <string name="apply_filter">Apply Filter</string>
     <string name="filters">Filters</string>
     <string name="select_one">You need to make at least one selection first!</string>
+    <string name="agree">I agree with the</string>
+    <string name="term"><u>Terms and Conditions</u></string>
+    <string name="and_the">and the</string>
+    <string name="privacy"><u>Privacy Policy</u></string>
+    <string name="privacy_other_text"></string>
 
 
 </resources>
