--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -286,6 +286,8 @@
     <string name="now_playing">अभी चल रहा है</string>
     <string name="go_to_my_downloads">मेरे डाउनलोड देखें</string>
     <string name="my_downloads">आपके डाउनलोड</string>
+    <string name="vipa_kids">VIPA Kids</string>
+    <string name="leave_kids">Leave Kids Mode</string>
 
     <string name="language_english">English</string>
     <string name="language_hindi">हिंदी</string>
