--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -50,6 +50,8 @@
     <string name="season">ซีซั่น</string>
     <string name="episode">ตอน</string>
     <string name="my_downloads">ดาวน์โหลดของฉัน</string>
+    <string name="vipa_kids">VIPA Kids</string>
+    <string name="leave_kids">Leave Kids Mode</string>
     <string name="yes">ใช่</string>
     <string name="no">ไม่</string>
     <string name="language_english">ภาษาอังกฤษ</string>
