--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -310,6 +310,8 @@
     <string name="pause_download">Pause Download</string>
     <string name="delete_download">Delete Download</string>
     <string name="my_downloads">My Downloads</string>
+    <string name="vipa_kids">VIPA Kids</string>
+    <string name="leave_kids">Leave Kids Mode</string>
 
     <string name="title_activity_downloaded_video">DownloadedVideoActivity</string>
     <string name="dummy_button">Dummy Button</string>
