--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -51,7 +51,7 @@
     <string name="episode">ตอน</string>
     <string name="my_downloads">ดาวน์โหลดของฉัน</string>
     <string name="vipa_kids">VIPA Kids</string>
-    <string name="leave_kids">Leave Kids Mode</string>
+    <string name="leave_kids">ออกจากคิดส์โหมด</string>
     <string name="yes">ใช่</string>
     <string name="no">ไม่</string>
     <string name="language_english">ภาษาอังกฤษ</string>
