--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -437,7 +437,7 @@
     <string name="term"><u>เงื่อนไขและข้อตกลง</u></string>
     <string name="and_the">รวมถึง</string>
     <string name="privacy"><u>นโยบายความเป็นส่วนตัว</u></string>
-    <string name="privacy_other_text">วในการเข้าถึงและใช้งาน VIPA</string>
+    <string name="privacy_other_text">ในการเข้าถึงและใช้งาน VIPA</string>
 
     <string name="genere">แนวภาพยนตร์</string>
     <string name="sort">ประเภท</string>
