cast lebel updated

--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -191,7 +191,7 @@
     <string name="watchlist">รายการโปรด</string>
     <string name="like">ชอบ</string>
     <string name="crew">ประเภทรายการ: </string>
-    <string name="cast">นักแสดง: </string>
+    <string name="cast">พิธีกร/นักแสดง: </string>
     <string name="result_caps">ผลลัพธ์</string>
     <string name="results_caps">ผลลัพธ์</string>
     <string name="exclusive">พรีเมี่ยม</string>
