--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -191,6 +191,7 @@
     <string name="cannot_delete_this_comment">You can delete only your comments.</string>
     <string name="buy_now">Buy Now</string>
     <string name="Continue">Continue</string>
+    <string name="Continue_dialog">Continue</string>
     <string name="purhcase_options">Purchase Options</string>
     <string name="issuepage">In case of any issues</string>
     <string name="Contact_us">Contact Us</string>
