--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -406,6 +406,7 @@
     <string name="kids_mode_pin">Kids Mode Pin</string>
     <string name="kids_mode_pin_set">Set your kids mode pin</string>
     <string name="plz_enter_valid_pin">Please enter valid Pin</string>
+    <string name="kids_mode_pin_enter">Enter your kids mode Pin</string>
     <string name="Continue_dialog">Continue</string>
 
 
