--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -423,7 +423,9 @@
     <string name="clear_all">Clear All</string>
     <string name="kids_mode_pin">Kids Mode Pin</string>
     <string name="kids_mode_pin_set">Set your kids mode pin</string>
+    <string name="kids_mode_pin_enter">Enter your kids mode pin</string>
     <string name="plz_enter_valid_pin">Please enter valid Pin</string>
+
 
 
 </resources>
