--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -46,8 +46,8 @@
 
     <string name="now_playing">กำลังเล่น</string>
     <string name="episodes">ตอน</string>
-    <string name="seasons">ซีซั่น</string>
-    <string name="season">ซีซั่น</string>
+    <string name="seasons">ซีซัน</string>
+    <string name="season">ซีซัน</string>
     <string name="episode">ตอน</string>
     <string name="my_downloads">ดาวน์โหลดของฉัน</string>
     <string name="vipa_kids">VIPA Kids</string>
