--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -163,7 +163,7 @@
     <string name="less">LESS</string>
     <string name="more">MORE</string>
     <string name="share">Share</string>
-    <string name="watchlist">Watchlist</string>
+    <string name="watchlist">Add to favorites</string>
     <string name="like">Like</string>
     <string name="crew">Genre: </string>
     <string name="cast">Cast: </string>
