--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -189,7 +189,7 @@
     <string name="error">พบข้อผิดพลาด</string>
     <string name="forgot_pwd">ลืมพาสเวิร์ด</string>
     <string name="share">แบ่งปัน</string>
-    <string name="watchlist">รายการโปรด</string>
+    <string name="watchlist">เพิ่มในรายการโปรด</string>
     <string name="like">ชอบ</string>
     <string name="crew">ประเภทรายการ: </string>
     <string name="cast">พิธีกร/นักแสดง: </string>
