--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -74,6 +74,7 @@
     <string name="forgot_password">Forgot Password</string>
     <string name="forgot_password_u"><b><u>Forgot Password?</u></b></string>
     <string name="email_id">Email for FB Login </string>
+    <string name="feature">FEATURE</string>
     <string name="dont_have_an_account">Don\'t have an account?</string>
     <string name="title_more">MORE</string>
     <string name="listing_title_text"><b>Movie</b></string>
