--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -66,6 +66,7 @@
     <string name="forgot_password">पासवर्ड भूल गए</string>
     <string name="forgot_password_u"><b><u>पासवर्ड भूल गए?</u></b></string>
     <string name="email_id">Email for FB Login </string>
+    <string name="feature">FEATURE</string>
     <string name="dont_have_an_account">खाता नहीं है?</string>
     <string name="title_more">अधिक</string>
     <string name="listing_title_text"><b>Movie</b></string>
