--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -70,6 +70,7 @@
     <string name="forgot_password">Lupa kata sandi</string>
     <string name="forgot_password_u"><b><u>Lupa kata sandi?</u></b></string>
     <string name="email_id">Email for FB Login </string>
+    <string name="feature">FEATURE</string>
     <string name="dont_have_an_account">Tidak punya akun?</string>
     <string name="title_more">MORE</string>
     <string name="listing_title_text"><b>Movie</b></string>
