--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -319,6 +319,7 @@
     <string name="name_validation_profile">ต้องการชื่อ</string>
     <string name="profile_registered_successfully">การลงทะเบียนสำเร็จ!</string>
     <string name="email_id">อีเมลสำหรับเข้าสู่ระบบ FB </string>
+    <string name="feature">FEATURE</string>
     <string name="check_connection_text">ตรวจสอบการเชื่อมต่ออินเทอร์เน็ต.</string>
     <string name="checkout">เช็คเอาท์</string>
     <string name="verify_user">ตรวจสอบบัญชี</string>
