--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,6 +72,7 @@
     <string name="forgot_password">Forgot Password</string>
     <string name="forgot_password_u"><b><u>Forgot Password?</u></b></string>
     <string name="email_id">Email for FB Login </string>
+    <string name="feature">FEATURE</string>
     <string name="watchlist_empty_message">Keep track of Movies, TV shows and clips you want to watch</string>
 
     <string name="dont_have_an_account">Don\'t have an account?</string>
