--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -426,7 +426,17 @@
     <string name="kids_mode_pin_set">Set your kids mode pin</string>
     <string name="kids_mode_pin_enter">Enter your kids mode pin</string>
     <string name="plz_enter_valid_pin">Please enter valid Pin</string>
-
-
+    <string name="developer_information">Developer Information</string>
+    <string name="about">About</string>
+    <string name="app">App</string>
+    <string name="user_id">User Id : %s</string>
+    <string name="app_version">App Version : %s</string>
+    <string name="device">Device</string>
+    <string name="device_model">Model : %s</string>
+    <string name="device_os">OS : %s</string>
+    <string name="device_os_version">Version: %d</string>
+    <string name="device_platform">Platform : %s</string>
+    <string name="date_time">Date/Time : %s</string>
+    <string name="internet">Internet : https://thaip.bs/helping</string>
 
 </resources>
