--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -410,6 +410,7 @@
     <string name="kids_mode_pin_enter">Enter your kids mode Pin</string>
     <string name="Continue_dialog">Continue</string>
     <string name="developer_information">Developer Information</string>
+    <string name="about">About</string>
     <string name="app">App</string>
     <string name="user_id">User Id : %s</string>
     <string name="app_version">App Version : %s</string>
