--- a/brightcovelibrary/src/main/res/values/strings.xml
+++ b/brightcovelibrary/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="select_video_quality">Select Video Quality</string>
     <string name="cancel">Cancel</string>
     <string name="next_episode">Next Episode</string>
+    <string name="previous_episode">Previous Episode</string>
     <string name="live">Live</string>
     <string name="skip_intro">Skip Intro</string>
     <string name="video_tracks_not_available">There is no video track for this content.ี้</string>
