--- a/brightcovelibrary/src/main/res/values/strings.xml
+++ b/brightcovelibrary/src/main/res/values/strings.xml
@@ -35,5 +35,9 @@
     <string name="skip_intro">Skip Intro</string>
     <string name="video_tracks_not_available">There is no video track for this content.ี้</string>
 
+    <string name="settings">Settings</string>
+    <string name="video_quality">Video Quality</string>
+    <string name="audio_tracks">Audio Tracks</string>
+
 
 </resources>
