--- a/brightcovelibrary/src/main/res/values/strings.xml
+++ b/brightcovelibrary/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="settings">Settings</string>
     <string name="video_quality">Video Quality</string>
     <string name="audio_tracks">Audio Tracks</string>
+    <string name="unsupportes_resolution">Device is unsupported 4K resolution</string>
 
 
 </resources>
