WIP: TPBS-76 - Fullscreen trailer in Series Detail Page
displaying Trailer button in Series detail and Episode activities

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -422,6 +422,7 @@
     <string name="device_platform">Platform : %s</string>
     <string name="date_time">Date/Time : %s</string>
     <string name="internet">Internet : https://thaip.bs/helping</string>
+    <string name="trailer">Trailer</string>
 
 
 </resources>
