--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -359,7 +359,7 @@
     <string name="heading_live">Live</string>
     <string name="heading_shows">Shows</string>
     <string name="heading_episodes">Episodes</string>
-    <string name="heading_program">Program</string>
+    <string name="heading_program">Programs</string>
     <string name="live_tag">Live</string>
     <string name="password_regex_error">Password is not strong enough</string>
     <string name="skip_intro">Skip Intro</string>
